--- a/examples/circuit_vanilla/index.html
+++ b/examples/circuit_vanilla/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/visiojs@latest/dist/visiojs.css" />
     <link rel="stylesheet" href="./App.css" />
-    <script src="https://cdn.jsdelivr.net/npm/visiojs@latest/dist/visiojs.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/visiojs"></script>
     <title>Vanilla JS</title>
   </head>
   <body>
